--- a/src/notes/02vue/01vue/03.md
+++ b/src/notes/02vue/01vue/03.md
@@ -20,8 +20,8 @@ let app = new Vue({
   el: "#app",
   data: {
     name: "小明",
-    age: "18"
-  }
+    age: "18",
+  },
 });
 app.name = "小强"; //v-once 导致页面姓名没有更改
 app.age = 20; // 年龄改成 20
@@ -45,11 +45,11 @@ app.age = 20; // 年龄改成 20
 ```javascript
 let rawHtml = {
   rawHtml: '<span style="color:red"This should be red</span>',
-  age: 18
+  age: 18,
 };
 let app2 = new Vue({
   el: "#app-2",
-  data: rawHtml
+  data: rawHtml,
 });
 ```
 
@@ -70,8 +70,8 @@ let app3 = new Vue({
   el: "#app-3",
   data: {
     dynamicId: "ceshidynamicId",
-    isButtonDisabled: true
-  }
+    isButtonDisabled: true,
+  },
 });
 ```
 
@@ -106,8 +106,8 @@ let app4 = new Vue({
     number: 10,
     ok: true,
     message: "我是中国人，我爱中国",
-    id: "ceshiid"
-  }
+    id: "ceshiid",
+  },
 });
 ```
 
@@ -135,13 +135,13 @@ let app5 = new Vue({
   data: {
     seen: true,
     url: "www.baidu.com",
-    id: "ceshiid"
+    id: "ceshiid",
   },
   methods: {
     doSomething: function() {
       console.log("访问不了");
-    }
-  }
+    },
+  },
 });
 ```
 
@@ -158,35 +158,28 @@ let app5 = new Vue({
 ```html
 <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
 <div id="app-6">
-  <!--
-注意，参数表达式的写法存在一些约束，如之后的“对动态参数表达式的约束”章节所述。
--->
-  <a v-bind:[attributeName]="url"... </a>
-  <a v-on:[eventName]="doSomething"... </a>
-  <!-- 这会触发一个编译警告 -->
-<a v-bind:['foo' + bar]="value"... </a>
-<!--
-在 DOM 中使用模板时这段代码会被转换为`v-bind:[someattr]`。
-除非在实例中有一个名为“someattr”的 property，否则代码不会工作。
--->
-<a v-bind:[someAttr]="value"... </a>
+  <!--注意，参数表达式的写法存在一些约束，如之后的“对动态参数表达式的约束”章节所述。-->
+  <a v-bind:[attributeName]="url">www.baidu.com</a>
+  <a v-on:[eventname]="doSomething"> doSomething</a>
 </div>
 ```
 
 ```javascript
 let app6 = new Vue({
   el: "#app-6",
-  data: {
-    url: "www.baidu.com",
-    attributename: "href", // 这边只能全部小写要不然会编译报错
-    eventname: "click", // 这边只能全部小写要不然会编译报错
-    someattr: "href" // 这边只能全部小写要不然会编译报错
+  data() {
+    return {
+      url: "www.baidu.com",
+      attributename: "href", // 这边只能全部小写要不然会编译报错
+      eventname: "click", // 这边只能全部小写要不然会编译报错
+      someattr: "href", // 这边只能全部小写要不然会编译报错
+    };
   },
   methods: {
     doSomething: function() {
       console.log("百度失败");
-    }
-  }
+    },
+  },
 });
 ```
 
@@ -212,8 +205,8 @@ let app7 = new Vue({
   methods: {
     onSubmit: function() {
       console.log("表单提交前出发事件");
-    }
-  }
+    },
+  },
 });
 ```
 
@@ -240,13 +233,13 @@ let app7 = new Vue({
 let app8 = new Vue({
   el: "#app-8",
   data: {
-    url: "www.baidu.com"
+    url: "www.baidu.com",
   },
   methods: {
     doSomething: function() {
       console.log("a标签点击事件");
-    }
-  }
+    },
+  },
 });
 ```
 
