--- a/src/notes/02vue/vue3.0/02.md
+++ b/src/notes/02vue/vue3.0/02.md
@@ -1,96 +1,71 @@
 :::snippet 创建一个`Vue`实例
 
 ```javascript
-let vm = new Vue({
-  // 选项
-});
+//每个 Vue 应用都是通过用 createApp 函数创建一个新的应用实例开始的
+let vm = Vue.createApp(/* 选项 */);
+//创建实例后，我们可以挂载它，将容器传递给 mount 方法。
+//例如，如果要在 <div id="app"></div> 上挂载 Vue 应用，则应传递 #app
+vm.mount("#app");
 ```
 
 :::
 
 :::snippet 数据与方法
 
+当一个实例被创建时，它将 data 对象中的所有的 property 加入到 Vue 的响应式系统中。当这些 property 的值发生改变时，视图将会产生“响应”，即匹配更新为新的值。
+
+```javascript
+// 我们 data 对象
+const data = { a: 1 };
+
+// 该对象被加入到一个根实例中
+const vm = Vue.createApp({
+  data() {
+    return data;
+  },
+}).mount("#app");
+
+// 获得这个实例上的 property
+// 返回源数据中对应的字段
+vm.a === data.a; // => true
+
+// 设置 property 也会影响到原始数据
+vm.a = 2;
+data.a; // => 2
+// 只有当实例被创建时就已经存在于 data 中的 property 才是响应式的。
+vm.b = "hi"; // 不响应
+```
+
+> 使用 Object.freeze()，这会阻止修改现有的 property，也意味着响应系统无法再追踪变化。
+
 ```html
 <script src="https://unpkg.com/vue@next"></script>
 <div id="app">
   <p>{{ foo }}</p>
-  <!-- 这里的 `foo` 不会更新！ -->
+  <!-- 这里的`foo`不会更新! -->
   <button v-on:click="foo = 'baz'">Change it</button>
 </div>
-<div id="example">
-  {{a}}
-</div>
 ```
 
 ```javascript
-// 当一个 Vue 实例被创建时，它将 data 对象中的所有的属性加入到 Vue 的响应式系统中。
-// 我们的数据对象
-let data = {
-  a: 1,
-  C: ""
-};
-// 该对象被加入到一个 Vue 实例中
-let vm1 = new Vue({
-  data: data
-});
-// 获得这个实例上的属性
-// 返回源数据中对应的字段
-vm1.a == data.a; // => true
-// 设置属性也会影响到原始数据
-vm1.a = 2;
-data.a; // => 2
-// ……反之亦然
-data.a = 3;
-vm1.a; // => 3
-// 只有当实例被创建时就已经存在于 data 中的属性才是响应式的。
-vm1.b = "hi"; // 对 b 的改动将不会触发任何视图的更新。
-
-// 使用 Object.freeze()，这会阻止修改现有的属性，也意味着响应系统无法再追踪变化。
-let obj = {
-  foo: "bar"
+const obj = {
+  foo: "bar",
 };
 Object.freeze(obj);
-let app = new Vue({
-  el: "#app",
-  data: obj
-});
-// Vue 实例还暴露了一些有用的实例属性与方法。它们都有前缀 $，以便与用户定义的属性区分开来。
-let data1 = {
-  a: 1
-};
-let vm2 = new Vue({
-  el: "#example",
-  data: data1
-});
-console.log(vm2.$data === data1); // => true
-console.log(vm2.$el === document.getElementById("example")); // => true
-// $watch 是一个实例方法
-vm2.$watch("a", function(newValue, oldValue) {
-  // 这个回调将在 `vm.a` 改变后调用
-});
-```
-
-:::
-
-:::snippet 实例生命周期钩子
-
-```javascript
-new Vue({
-  data: {
-    a: 1
+const vm = Vue.createApp({
+  data() {
+    return obj;
   },
-  created: function() {
-    // `this` 指向 vm 实例
-    console.log("a is: " + this.a); // => "a is: 1"
-  }
-});
+}).mount("#app");
+//实例还暴露了一些有用的实例 property 与方法。它们都有前缀 $，以便与用户定义的 property 区分开来。
+vm.$data.foo; // => bar
 ```
 
 :::
 
 :::snippet 生命周期
 
-![初始化](/src/assets/images/vuecourse-02-01.png)
+![初始化](/src/assets/images/vue-life-cycle.png)
 
 1. `beforeCreate`（新对象诞生）
    `Vue`对象用新方法实例化。它创建一个`Vue`类的对象来处理`DOM`元素。对象的这个生命阶段可以通过`beforeCreated`挂钩来访问 。我们可以在这个钩子中插入我们的代码，在对象初始化之前执行。
@@ -110,12 +85,106 @@ new Vue({
 6. `updated` 更新（在`DOM`中呈现的更改）
    然后，通过实际更新`DOM`对象并触发`updated`，屏幕上的变化得到呈现 。
 
-7. `beforeDestroy`（对象准备死掉）
-   就在 Vue 对象被破坏并从内存中释放之前，`deforeDestroy`钩子被触发，并允许我们在其中处理我们的自定义代码。
+7. `beforeUnmount`（对象撤销挂载前）
+   就在 Vue 对象被破坏并从内存中释放之前，`beforeUnmount`钩子被触发，并允许我们在其中处理我们的自定义代码。
 
-8. `destroyed`销毁（对象停止并从内存中删除）
-   该`destroyed`钩子被成功运行销毁对象上调用。
+8. `Unmounted` （对象撤销挂载前）
+   该`Unmounted`钩子被成功运行销毁对象上调用。
 
-> 不要在选项属性或回调上使用箭头函数，比如`created: () => console.log(this.a)`或`vm.\$watch('a', newValue => this.myMethod())`。因为箭头函数是和父级上下文绑定在一起的，`this`不会是如你所预期的`Vue`实例，经常导致`Uncaught TypeError: Cannot read property of undefined`或`Uncaught TypeError: this.myMethod is not a function`之类的错误。
+> 不要在选项属性或回调上使用箭头函数。
+
+:::
+
+:::snippet 实例生命周期钩子
+
+```html
+<script src="https://unpkg.com/vue@next"></script>
+<div id="app" class="demo">
+  {{a}}
+</div>
+```
+
+```javascript
+const {
+  defineComponent,
+  onBeforeMount,
+  onMounted,
+  onBeforeUpdate,
+  onUpdated,
+  onBeforeUnmount,
+  onUnmounted,
+  onErrorCaptured,
+} = Vue;
+let app = {
+  data() {
+    return {
+      a: 1,
+    };
+  },
+  setup() {
+    // Composition API
+    // setup 没有 onBeforeCreate 和  onCreated
+    // onBeforeCreate(() => {
+    //         console.log('Composition API onBeforeCreate')
+    //     }),
+    //     onCreated(() => {
+    //         console.log('Composition API onCreated')
+    //     }),
+    onBeforeMount(() => {
+      console.log("Composition API onBeforeMount");
+    });
+    onMounted(() => {
+      console.log("Composition API onMounted");
+    });
+
+    onBeforeUpdate(() => {
+      console.log("Composition API onBeforeUpdate");
+    });
+    onUpdated(() => {
+      console.log("Composition API onUpdated");
+    });
+    onBeforeUnmount(() => {
+      console.log("Composition API onBeforeUnmount");
+    });
+    onUnmounted(() => {
+      console.log("Composition API onUnmounted");
+    });
+    onErrorCaptured(() => {
+      console.log("Composition API onErrorCaptured");
+    });
+  },
+  beforeCreate() {
+    console.log("Options API beforeCreate");
+  },
+  created() {
+    console.log("Options API created ");
+  },
+  beforeMount() {
+    console.log("Options API beforeMount ");
+  },
+  mounted() {
+    console.log("Options API mounted ");
+  },
+  beforeUpdate() {
+    console.log("Options API beforeUpdate ");
+  },
+  updated() {
+    console.log("Options API updated ");
+  },
+  beforeCreate() {
+    console.log("Options API beforeCreate");
+  },
+  beforeUnmount() {
+    console.log("Options API beforeUnmount ");
+  },
+  unmounted() {
+    console.log("Options API unmounted ");
+  },
+  errorCaptured() {
+    console.log("Options API errorCaptured  ");
+  },
+};
+Vue.createApp(defineComponent(app)).mount("#app");
+```
 
 :::
