--- a/src/notes/02vue/vue3.0/04.md
+++ b/src/notes/02vue/vue3.0/04.md
@@ -5,91 +5,106 @@
 
 ```html
 <script src="https://unpkg.com/vue@next"></script>
-<div id="example">
-  <p>Original message: "{{ message }}"</p>
-  <p>Computed reversed message: "{{ reversedMessage }}"</p>
+<div id="app">
+  <p>Has published books:</p>
+  <span>{{ publishedBooksMessage }}</span>
 </div>
 ```
 
 ```javascript
-//计算属性 reversedMessage。我们提供的函数将用作属性 vm.reversedMessage 的 getter 函数：
-let vm = new Vue({
-  el: "#example",
-  data: {
-    message: "Hello"
+const { reactive, computed } = Vue;
+let appComposition = {
+  setup() {
+    let author = reactive({
+      name: "John Doe",
+      books: [
+        "Vue 2 - Advanced Guide",
+        "Vue 3 - Basic Guide",
+        "Vue 4 - The Mystery",
+      ],
+    });
+    const publishedBooksMessage = computed(() => {
+      console.log("calculateBooksMessage");
+      return author.books.length > 0 ? "Yes" : "No";
+    });
+    return {
+      author,
+      publishedBooksMessage,
+    };
+  },
+};
+const appOptions = {
+  data() {
+    return {
+      author: {
+        name: "John Doe",
+        books: [
+          "Vue 2 - Advanced Guide",
+          "Vue 3 - Basic Guide",
+          "Vue 4 - The Mystery",
+        ],
+      },
+    };
   },
   computed: {
     // 计算属性的 getter
-    reversedMessage: function() {
-      //`this`指向 vm 实例
-      return this.message
-        .split("")
-        .reverse()
-        .join("");
-    }
-  }
-});
-console.log(vm.reversedMessage); // => 'olleH'
-vm.message = "Goodbye";
-console.log(vm.reversedMessage); // => 'eybdooG'
+    publishedBooksMessage() {
+      // `this` points to the vm instance
+      return this.author.books.length > 0 ? "Yes" : "No";
+    },
+  },
+};
+Vue.createApp(appComposition).mount("#app");
+//Vue.createApp(appOptions).mount('#app')
 ```
 
 :::
 
 :::snippet 计算属性缓存`vs`方法
 
-1. 计算属性只在相关依赖发生改变时它们才会重新求值。
-2. 方法 当触发重新渲染时，调用方法将总会再次执行函数。
+1. 两种方式的最终结果确实是完全相同的。
+2. 计算属性是基于它们的反应依赖关系缓存的。
+3. 计算属性只在相关依赖发生改变时它们才会重新求值。
+4. 方法 当触发重新渲染时，调用方法将总会再次执行函数。
 
 ```html
 <script src="https://unpkg.com/vue@next"></script>
 <div id="app">
-  <p>Original Message：{{message}}</p>
-  <p>Computer Reverse Message：{{reversedMessage}}</p>
-  <p>reversedFun：{{reversedFun()}}</p>
+  <p>Has published books:</p>
+  <p>{{ publishedBooksMessage }}</p>
+  <p>{{ calculateBooksMessage() }}</p>
 </div>
 ```
 
 ```javascript
-let indexComputed = 0;
-let indexMethod = 0;
-let app = new Vue({
-  el: "#app",
-  data: {
-    message: "Hello"
+const appOptions = {
+  data() {
+    return {
+      author: {
+        name: "John Doe",
+        books: [
+          "Vue 2 - Advanced Guide",
+          "Vue 3 - Basic Guide",
+          "Vue 4 - The Mystery",
+        ],
+      },
+    };
   },
   computed: {
-    reversedMessage: function() {
-      indexComputed++;
-      return (
-        this.message
-          .split("")
-          .reverse()
-          .join("") +
-        " indexComputed:" +
-        indexComputed
-      );
-    }
+    // 计算属性的 getter
+    publishedBooksMessage() {
+      // `this` points to the vm instance
+      return this.author.books.length > 0 ? "Yes" : "No";
+    },
   },
   methods: {
-    reversedFun: function() {
-      indexMethod++;
-      return (
-        this.message
-          .split("")
-          .reverse()
-          .join("") +
-        " indexMethod:" +
-        indexMethod
-      );
-    }
-  }
-});
-console.log(app.reversedMessage); // olleH indexComputed:1
-console.log(app.reversedFun()); // olleH indexMethod:2
-app.message = "message";
-console.log(app.reversedMessage); //egassem indexComputed2
-console.log(app.reversedFun()); //egassem indexMethod3
+    calculateBooksMessage() {
+      return this.author.books.length > 0 ? "Yes" : "No";
+    },
+  },
+};
+Vue.createApp(appComposition).mount("#app");
+//Vue.createApp(appOptions).mount('#app')
 ```
 
 :::
@@ -115,7 +130,7 @@ let app2 = new Vue({
   data: {
     firstName: "7000",
     lastName: "huang",
-    quanming: "Foo Bar"
+    quanming: "Foo Bar",
   },
   watch: {
     firstName: function(val) {
@@ -127,15 +142,15 @@ let app2 = new Vue({
       indexWatch++;
       console.log("执行" + indexWatch + "次watch的lastName");
       this.quanming = this.firstName + " " + val;
-    }
+    },
   },
   computed: {
     fullName: function() {
       indexComputed++;
       console.log("执行" + indexComputed + "次computed的fullName");
       return this.firstName + " " + this.lastName;
-    }
-  }
+    },
+  },
 });
 console.log(app2.fullName); // 7000 huang
 console.log(app2.firstName); // 7000
@@ -152,123 +167,102 @@ console.log(app2.lastName); // huang
 
 ```html
 <script src="https://unpkg.com/vue@next"></script>
-<div id="app-3">
+<div id="app">
   <p>firstName：{{firstName}}</p>
   <p>lastName：{{lastName}}</p>
   <p>fullName：{{fullName}}</p>
+  <button @click="resetName">重命名</button>
 </div>
 ```
 
 ```javascript
-let indexGet = 0;
-let indexSet = 0;
-let indexfirstName = 0;
-let indexlastName = 0;
-let app3 = new Vue({
-  el: "#app-3",
-  data: {
-    firstName: "7000",
-    lastName: "huang",
-    quanming: "Foo Bar"
-  },
-  watch: {
-    firstName: function(val) {
-      indexfirstName++;
-      console.log("执行" + indexfirstName + "次dd的wwatch的firstName");
-      this.quanming = val + " " + this.lastName;
-    },
-    lastName: function(val) {
-      indexlastName++;
-      console.log("执行" + indexlastName + "次dd的watch的lastName");
-      this.quanming = this.firstName + " " + val;
-    }
+const appOptions = {
+  data() {
+    return {
+      firstName: "7000",
+      lastName: "huang",
+      quanming: "huang ningyuan",
+    };
   },
   computed: {
     fullName: {
       // getter
-      get: function() {
-        indexGet++;
-        console.log("执行" + indexGet + "次dd的computed的fullName的get");
+      get() {
         return this.firstName + " " + this.lastName;
       },
       // setter
-      set: function(newValue) {
-        indexSet++;
-        console.log("执行" + indexSet + "次dd的computed的fullName的set");
+      set(newValue) {
         var names = newValue.split(" ");
         this.firstName = names[0];
         this.lastName = names[names.length - 1];
+      },
+    },
+  },
+  methods: {
+    resetName() {
+      if (this.fullName === "huang xiqian") {
+        this.fullName = "huang 7000";
+      } else {
+        this.fullName = "huang xiqian";
       }
-    }
-  }
-});
-console.log(app3.fullName); // 7000 huang
-console.log(app3.firstName); // 7000
-console.log(app3.lastName); // huang
-app3.fullName = "huang xiqian";
+    },
+  },
+};
+Vue.createApp(appOptions).mount("#app");
 ```
 
 :::
 
 :::snippet 侦听器
-在这个示例中，使用`watch`选项允许我们执行异步操作 (访问一个`API`)，限制我们执行该操作的频率，并在我们得到最终结果前，设置中间状态。这些都是计算属性无法做到的。
+watch 选项提供了一个更通用的方法，来响应数据的变化。当需要在数据变化时执行异步或开销较大的操作时，这个方式是最有用的。
 
 ```html
-<script src="https://unpkg.com/vue@next"></script>
-<!-- 因为 AJAX 库和通用工具的生态已经相当丰富，Vue 核心代码没有重复 -->
-<!-- 提供这些功能以保持精简。这也可以让你自由选择自己更熟悉的工具。 -->
-<script src="https://cdn.jsdelivr.net/npm/axios@0.12.0/dist/axios.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/lodash@4.13.1/lodash.min.js"></script>
-<div id="watch-example">
-  <p>
-    Ask a yes/no question:
-    <input v-model="question" />
-  </p>
-  <p>{{ answer }}</p>
+<div id="app">
+  <p>firstName: <input v-model="firstName" /></p>
+  <p>lastName: <input v-model="lastName" /></p>
+  <p>fullName: {{ fullName }}</p>
 </div>
 ```
 
 ```javascript
-let watchExampleVM = new Vue({
-  el: "#watch-example",
-  data: {
-    question: "",
-    answer: "I cannot give you an answer until you ask a question!"
+const { reactive, ref, computed, watch } = Vue;
+let appComposition = {
+  setup() {
+    let firstName = ref("7000");
+    let lastName = ref("huang");
+    let fullName = ref("");
+    watch(firstName, (val, oldVal) => {
+      fullName.value = val + " " + lastName.value;
+    });
+    watch(lastName, (val) => {
+      fullName.value = firstName.value + " " + val;
+    });
+    return {
+      firstName,
+      lastName,
+      fullName,
+    };
+  },
+};
+const appOptions = {
+  data() {
+    return {
+      firstName: "Foo",
+      lastName: "Bar",
+      fullName: "",
+    };
   },
   watch: {
-    // 如果`question`发生改变，这个函数就会运行
-    question: function(newQuestion, oldQuestion) {
-      this.answer = "Waiting for you to stop typing...";
-      this.debouncedGetAnswer();
-    }
+    firstName(val) {
+      this.fullName = val + " " + this.lastName;
+    },
+    lastName(val) {
+      this.fullName = this.firstName + " " + val;
+    },
   },
-  created: function() {
-    //`_.debounce`是一个通过 Lodash 限制操作频率的函数。
-    // 在这个例子中，我们希望限制访问 yesno.wtf/api 的频率
-    // AJAX 请求直到用户输入完毕才会发出。想要了解更多关于
-    //`_.debounce`函数 (及其近亲`_.throttle`) 的知识，
-    // 请参考：https://lodash.com/docs#debounce
-    this.debouncedGetAnswer = _.debounce(this.getAnswer, 500);
-  },
-  methods: {
-    getAnswer: function() {
-      if (this.question.indexOf("?") === -1) {
-        this.answer = "Questions usually contain a question mark. ;-)";
-        return;
-      }
-      this.answer = "Thinking...";
-      var vm = this;
-      axios
-        .get("https://yesno.wtf/api")
-        .then(function(response) {
-          vm.answer = _.capitalize(response.data.answer);
-        })
-        .catch(function(error) {
-          vm.answer = "Error! Could not reach the API. " + error;
-        });
-    }
-  }
-});
+};
+Vue.createApp(appComposition).mount("#app");
+//Vue.createApp(appOptions).mount('#app')
 ```
 
 :::
