--- a/src/notes/02vue/vue3.0/05.md
+++ b/src/notes/02vue/vue3.0/05.md
@@ -11,7 +11,9 @@
   id="app"
   class="static"
   v-bind:class="{ active: isActive, 'text-danger': hasError }"
-></div>
+>
+
+</div>
 <!-- 结果渲染为  <div id="app-2" class="active"></div> -->
 <div v-bind:class="classObject" id="app-2"></div>
 ```
