--- a/src/notes/02vue/vue3.0/06.md
+++ b/src/notes/02vue/vue3.0/06.md
@@ -22,6 +22,9 @@ let app = new Vue({
 app.ok = false;
 ```
 
+> `truthy`（真值）指的是在布尔值上下文中，转换后的值为真的值。
+> 所有值都是真值，除非它们被定义为 假值（即除`false`、`0`、`""`、`null`、`undefined`和`NaN`以外皆为真值）。
+
 :::
 
 :::snippet `<template>`元素上使用`v-if`条件渲染分组
