--- a/src/notes/02vue/vue3.0/05.md
+++ b/src/notes/02vue/vue3.0/05.md
@@ -1,41 +1,33 @@
 :::snippet 绑定`HTML Class`对象语法
 
 1. `v-bind:class`指令也可以与普通的`class`属性共存。当`isActive`或者`hasError`变化时，`class`列表将相应地更新。
-2. `truthy`（真值）指的是在布尔值上下文中，转换后的值为真的值。所有值都是真值，除非它们被定义为 假值（即除`false`、`0`、`""`、`null`、`undefined`和`NaN`以外皆为真值）。
-3. 绑定的数据对象不必内联定义在模板里
+2. 绑定的数据对象不必内联定义在模板里
 
 ```html
 <script src="https://unpkg.com/vue@next"></script>
-<!-- 结果渲染为  <div id="app" class="static active"></div> -->
-<div
-  id="app"
-  class="static"
-  v-bind:class="{ active: isActive, 'text-danger': hasError }"
->
-
+<div id="app">
+  <div
+    class="static"
+    :class="{ active: isActive, 'text-danger': hasError }"
+  ></div>
+  <div :class="classObject"></div>
 </div>
-<!-- 结果渲染为  <div id="app-2" class="active"></div> -->
-<div v-bind:class="classObject" id="app-2"></div>
 ```
 
 ```javascript
-let app = new Vue({
-  el: "#app",
-  data: {
-    isActive: true,
-    hasError: false
-  }
-});
-app.hasError = true; //id="app01"div的class="test active text-danger divclass"
-let app2 = new Vue({
-  el: "#app-2",
-  data: {
-    classObject: {
-      active: true,
-      "text-danger": false
-    }
-  }
-});
+const appOptions = {
+  data() {
+    return {
+      isActive: true,
+      hasError: false,
+      classObject: {
+        active: true,
+        "text-danger": false,
+      },
+    };
+  },
+};
+Vue.createApp(appOptions).mount("#app");
 ```
 
 :::
@@ -44,38 +36,24 @@ let app2 = new Vue({
 
 ```html
 <script src="https://unpkg.com/vue@next"></script>
-<!-- 结果渲染为 <div id="app-3" class="active text-danger"></div> -->
-<div id="app-3" v-bind:class="[activeClass, errorClass]"></div>
-<!-- 结果渲染为 <div id="app-4" class="text-danger"></div> -->
-<div id="app-4" v-bind:class="[isActive ? activeClass : '', errorClass]"></div>
-<!-- 结果渲染为 <div id="app-5" class="active-div text-danger"></div> -->
-<div id="app-5" v-bind:class="[{ active: isActive }, errorClass]"></div>
+<div id="app">
+  <div :class="[activeClass, errorClass]"></div>
+  <div :class="[isActive ? activeClass : '', errorClass]"></div>
+  <div :class="[{ active: isActive }, errorClass]"></div>
+</div>
 ```
 
 ```javascript
-let app3 = new Vue({
-  el: "#app-3",
-  data: {
-    activeClass: "active",
-    errorClass: "text-danger"
-  }
-});
-let app4 = new Vue({
-  el: "#app-4",
-  data: {
-    isActive: false,
-    activeClass: "active",
-    errorClass: "text-danger"
-  }
-});
-let app5 = new Vue({
-  el: "#app-5",
-  data: {
-    isActive: true,
-    active: "active-div",
-    errorClass: "text-danger"
-  }
-});
+const appOptions = {
+  data() {
+    return {
+      isActive: true,
+      activeClass: "active",
+      errorClass: "text-danger",
+    };
+  },
+};
+Vue.createApp(appOptions).mount("#app");
 ```
 
 :::
@@ -84,35 +62,25 @@ let app5 = new Vue({
 
 ```html
 <script src="https://unpkg.com/vue@next"></script>
-<div id="app-6">
-  <!-- 结果渲染为 <p  class="foo bar baz boo"> 姓名：huang7000  年龄：18 </p> -->
+<div id="app">
   <my-component class="baz boo"></my-component>
-  <!-- 结果渲染为 <p  class="foo bar active-div text-danger"> 姓名：huang7000  年龄：18 </p> -->
-  <my-component
-    v-bind:class="[{ active: isActive }, errorClass]"
-  ></my-component>
+  <my-component :class="{ active: isActive }"></my-component>
 </div>
 ```
 
 ```javascript
-Vue.component("my-component", {
-  data: function() {
+const appOptions = {
+  data() {
     return {
-      name: "huang7000",
-      age: "18"
+      isActive: true,
     };
   },
-  template: '<p class="foo bar">>姓名：{{name}} 年龄：{{age}} </p>'
+};
+const app = Vue.createApp(appOptions);
+app.component("my-component", {
+  template: `<p class="foo bar">Hi!</p>`,
 });
-let app6 = new Vue({
-  el: "#app-6",
-  data: {
-    isActive: true,
-    active: "active-div",
-    errorClass: "text-danger"
-  }
-});
-//id=app08的div里面div的class 渲染加上my-component的样式
+app.mount("#app");
 ```
 
 :::
@@ -121,45 +89,27 @@ let app6 = new Vue({
 
 ```html
 <script src="https://unpkg.com/vue@next"></script>
-<!-- 结果渲染为 <div id="app-7" style="color:red;fontSize: 30px;" > </div> -->
-<div
-  id="app-7"
-  v-bind:style="{ color: activeColor, fontSize: fontSize + 'px' }"
-></div>
+<div id="app">
+  <div :style="{ color: activeColor, fontSize: fontSize + 'px' }"></div>
+  <!-- 直接绑定到一个样式对象通常更好，这会让模板更清晰 -->
+  <div :style="styleObject"></div>
+</div>
 ```
 
 ```javascript
-let app7 = new Vue({
-  el: "#app-7",
-  data: {
-    activeColor: "red",
-    fontSize: 30
-  }
-});
-```
-
-:::
-
-:::snippet 绑定内联样式对象语法
-
-> `CSS`属性名可以用驼峰式 (`camelCase`) 或短横线分隔 (`kebab-case`，记得用引号括起来) 来命名
-
-```html
-<script src="https://unpkg.com/vue@next"></script>
-<!-- 结果渲染为 <div id="app-8" style="color:red;fontSize: 30px;" > </div> -->
-<div id="app-8" v-bind:style="styleObject"></div>
-```
-
-```javascript
-let app8 = new Vue({
-  el: "#app-8",
-  data: {
-    styleObject: {
-      color: "red",
-      fontSize: "13px"
-    }
-  }
-});
+const appOptions = {
+  data() {
+    return {
+      activeColor: "red",
+      fontSize: 30,
+      styleObject: {
+        color: "red",
+        fontSize: "13px",
+      },
+    };
+  },
+};
+Vue.createApp(appOptions).mount("#app");
 ```
 
 :::
@@ -168,26 +118,28 @@ let app8 = new Vue({
 
 ```html
 <script src="https://unpkg.com/vue@next"></script>
-<!-- 结果渲染为 <div id="app-9" style="color: red; width: 550px; font-size: 36px; border: 1px;"> </div> -->
-<div id="app-9" class="test" v-bind:style="[styleObject,mainObejct]"></div>
+<div id="app" :style="[baseStyles, overridingStyles]"></div>
 ```
 
 ```javascript
-let app9 = new Vue({
-  el: "#app-9",
-  data: {
-    styleObject: {
-      color: "red",
-      width: "550px",
-      fontSize: "18px"
-    },
-    mainObejct: {
-      border: "1px",
-      fontSize: "36px"
-    }
-  }
-});
+const appOptions = {
+  data() {
+    return {
+      baseStyles: {
+        color: "red",
+        fontSize: "13px",
+      },
+      overridingStyles: {
+        color: "blue",
+        width: "500px",
+      },
+    };
+  },
+};
+Vue.createApp(appOptions).mount("#app");
 ```
+
+> 当`v-bind:style`使用需要添加浏览器引擎前缀的`CSS`属性时，如`transform`，`Vue.js`会自动侦测并添加相应的前缀。
 
 :::
 
@@ -195,54 +147,43 @@ let app9 = new Vue({
 
 ```html
 <script src="https://unpkg.com/vue@next"></script>
-<div id="app-10">
-  <!-- 结果渲染为 <p  class="baz boo" style=" color:red;fontSize:36px;border:1px;"> 姓名：huang7000  年龄：18 </p> -->
-  <component-demos
+<div id="app">
+  <component-demo
     class="baz boo"
-    id="components-demos"
     v-bind:style="[styleObject,mainObejct]"
-  ></component-demos>
-  <!-- 结果渲染为 <p  class="baz boo" style=" color:blue;fontSize:25px;"> 姓名：huang7000  年龄：18 </p> -->
-  <component-demos
+  ></component-demo>
+  <component-demo
     class="baz boo"
-    id="components-demos"
     v-bind:style="{ color: colorValue, fontSize: fontSize + 'px' }"
-  ></component-demos>
+  >
+  </component-demo>
 </div>
 ```
 
 ```javascript
-Vue.component("component-demos", {
-  data: function() {
+const appOptions = {
+  data() {
     return {
-      name: "huang7000",
-      age: "18"
+      styleObject: {
+        color: "red",
+        fontSize: "18px",
+      },
+      mainObejct: {
+        border: "1px",
+        fontSize: "36px",
+      },
+      colorValue: "blue",
+      fontSize: 25,
     };
   },
-  template: '<p class="foo bar">>姓名：{{name}} 年龄：{{age}} </p>'
+};
+const app = Vue.createApp(appOptions);
+
+app.component("component-demo", {
+  template: '<p class="foo bar">hello  </p>',
 });
-let app10 = new Vue({
-  el: "#app-10",
-  data: {
-    styleObject: {
-      color: "red",
-      fontSize: "18px"
-    },
-    mainObejct: {
-      border: "1px",
-      fontSize: "36px"
-    },
-    colorValue: "blue",
-    fontSize: 25
-  }
-});
+app.mount("#app");
 ```
-
-:::
-
-:::snippet 自动添加前缀
-
-当`v-bind:style`使用需要添加浏览器引擎前缀的`CSS`属性时，如`transform`，`Vue.js`会自动侦测并添加相应的前缀。
 
 :::
 
