--- a/src/notes/02vue/vue3.0/06.md
+++ b/src/notes/02vue/vue3.0/06.md
@@ -9,17 +9,19 @@
 <div id="app">
   <h1 v-if="awesome">Vue is awesome!</h1>
   <h1 v-else>Oh no 😢</h1>
+  <button @click="awesome=!awesome">切换</button>
 </div>
 ```
 
 ```javascript
-let app = new Vue({
-  el: "#app",
-  data: {
-    awesome: true
-  }
-});
-app.ok = false;
+const appOptions = {
+  data() {
+    return {
+      awesome: true,
+    };
+  },
+};
+Vue.createApp(appOptions).mount("#app");
 ```
 
 > `truthy`（真值）指的是在布尔值上下文中，转换后的值为真的值。
@@ -31,26 +33,31 @@ app.ok = false;
 
 ```html
 <script src="https://unpkg.com/vue@next"></script>
-<div id="app-2">
+
+<div id="app">
   <template v-if="ok">
-    <h1>Title</h1>
+    <h1>Paragraph</h1>
     <p>Paragraph 1</p>
     <p>Paragraph 2</p>
   </template>
   <template v-else>
+    <h1>template</h1>
     <p>template 1</p>
     <p>template 2</p>
   </template>
+  <button @click="ok=!ok">切换</button>
 </div>
 ```
 
 ```javascript
-let app2 = new Vue({
-  el: "#app-2",
-  data: {
-    ok: true
-  }
-});
+const appOptions = {
+  data() {
+    return {
+      ok: true,
+    };
+  },
+};
+Vue.createApp(appOptions).mount("#app");
 ```
 
 :::
@@ -60,64 +67,32 @@ let app2 = new Vue({
 
 ```html
 <script src="https://unpkg.com/vue@next"></script>
-<div id="app3">
-  <p v-if="type === '神'">
-    神
-  </p>
-  <p v-else-if="type === '魔'">
-    魔
-  </p>
-  <p v-else>
+<div id="app">
+  <div v-if="type === 1">
+    天地人
+  </div>
+  <div v-else-if="type === 2">
+    儒释道
+  </div>
+  <div v-else-if="type ===3">
+    妖魔鬼
+  </div>
+  <div v-else>
     神魔非我
-  </p>
+  </div>
+  <button @click="type=type===3?0:type+1">切换</button>
 </div>
 ```
 
 ```javascript
-let app3 = new Vue({
-  el: "#app-3",
-  data: {
-    type: "人"
-  }
-});
-```
-
-:::
-
-:::snippet 用`key`管理可复用的元素
-
-1. 添加一个具有唯一值的`key`属性
-2. 输入框都将被重新渲染。
-3. `<label>`元素仍然会被高效地复用，因为它们没有添加 key 属性。
-
-```html
-<script src="https://unpkg.com/vue@next"></script>
-<div id="app-4">
-  <template v-if="loginType=='username'">
-    <label> username</label>
-    <input placeholder=" enter your username" key="username-input" />
-  </template>
-  <template v-else>
-    <label>email</label>
-    <input placeholder=" enter your email" key="email-input" />
-  </template>
-  <button @click="toggleLoginType">Toggle login type</button>
-</div>
-```
-
-```javascript
-let app4 = new Vue({
-  el: "#app-4",
-  data: {
-    loginType: "username"
+const appOptions = {
+  data() {
+    return {
+      type: 0,
+    };
   },
-  methods: {
-    toggleLoginType: function() {
-      return (this.loginType =
-        this.loginType === "username" ? "email" : "username");
-    }
-  }
-});
+};
+Vue.createApp(appOptions).mount("#app");
 ```
 
 :::
@@ -126,25 +101,23 @@ let app4 = new Vue({
 
 带有`v-show`的元素始终会被渲染并保留在`DOM`中。`v-show`只是简单地切换元素的`CSS`属性`display`。
 
-> 注意，`v-show`不支持`<template>`元素，也不支持`v-else`。
-
 ```html
 <script src="https://unpkg.com/vue@next"></script>
-<div id="app-5">
-  <template v-show="ok">
-    <p>Paragraph 1</p>
-    <p>Paragraph 2</p>
-  </template>
+<div id="app">
+  <h1 v-show="ok">Hello!</h1>
+  <button @click="ok=!ok">标题</button>
 </div>
 ```
 
 ```javascript
-let app5 = new Vue({
-  el: "#app-5",
-  data: {
-    ok: true
-  }
-});
+const appOptions = {
+  data() {
+    return {
+      ok: true,
+    };
+  },
+};
+Vue.createApp(appOptions).mount("#app");
 ```
 
 :::
@@ -153,11 +126,10 @@ let app5 = new Vue({
 
 1. `v-if`是`真正`的条件渲染，因为它会确保在切换过程中条件块内的事件监听器和子组件适当地被销毁和重建。
 2. `v-if`也是惰性的：如果在初始渲染时条件为假，则什么也不做。——直到条件第一次变为真时，才会开始渲染条件块。
-3. `v-show`就简单得多——不管初始条件是什么，元素总是会被渲染，并且只是简单地基于`CSS`进行切换。
-4. `v-if`有更高的切换开销，而`v-show`有更高的初始渲染开销。
-5. 如果需要非常频繁地切换，则使用`v-show`较好；如果在运行时条件很少改变，则使用`v-if`较好。
-
-> `v-if`有更高的切换开销，而`v-show`有更高的初始渲染开销。因此，如果需要非常频繁地切换，则使用`v-show`较好；如果在运行时条件很少改变，则使用`v-if`较好。
+3. `v-show`不管初始条件是什么，元素总是会被渲染，并且只是简单地基于`CSS`进行切换。
+4. `v-show`不支持`<template>`元素，也不支持 `v-else`。
+5. `v-if`有更高的切换开销，而`v-show`有更高的初始渲染开销。
+6. 如果需要非常频繁地切换，则使用`v-show`较好；如果在运行时条件很少改变，则使用`v-if`较好。
 
 :::
 
@@ -165,5 +137,6 @@ let app5 = new Vue({
 
 1. 不推荐同时使用`v-if`和`v-for`。请查阅风格指南以获取更多信息。
 2. 当`v-if`与`v-for`一起使用时，`v-for`具有比`v-if`更高的优先级。
+3. 在需要`v-for`与`v-if`一起使用时可以用`v-show`代替`v-if`。
 
 :::
