--- a/src/notes/02vue/vue3.0/07.md
+++ b/src/notes/02vue/vue3.0/07.md
@@ -3,73 +3,106 @@
 1. 我们可以用`v-for`指令基于一个数组来渲染一个列表。
 2. `v-for`指令需要使用`item in items`形式的特殊语法，其中`items`是源数据数组，而`item`则是被迭代的数组元素的别名。
 3. `of`替代`in`作为分隔符，因为它是最接近`JavaScript`迭代器的语法
-4. `v-for`还支持一个可选的第二个参数，即当前项的索引。
 
 ```html
 <script src="https://unpkg.com/vue@next"></script>
-<ul id="example-1">
-  <li v-for="item in items">
-    {{ item.message }}
-  </li>
-  <li v-for="item of items">
-    {{ item.message }}
-  </li>
-  <li v-for="(item, index) in items">
-    {{ parentMessage }} - {{ index }} - {{ item.message }}
-  </li>
-</ul>
+<div id="app">
+  <h2>item in items</h2>
+  <ul>
+    <li v-for="item in items">
+      {{ item.name }}
+    </li>
+  </ul>
+  <h2>item of items</h2>
+  <ul>
+    <li v-for="item of items">
+      {{ item.name }}
+    </li>
+  </ul>
+  <h2>(item, index) in items</h2>
+  <ul>
+    <li v-for="(item, index) in items">
+      {{ index }} - {{ item.name }}
+    </li>
+  </ul>
+  <h2>(item, index) of items</h2>
+  <ul>
+    <li v-for="(item, index) of items">
+      {{ index }} - {{ item.name }}
+    </li>
+  </ul>
+</div>
 ```
 
 ```javascript
-var example1 = new Vue({
-  el: "#example-1",
-  data: {
-    items: [{ message: "Foo" }, { message: "Bar" }],
-    parentMessage: "parent"
-  }
-});
+const appOptions = {
+  data() {
+    return {
+      items: [
+        {
+          name: "小强",
+          age: 18,
+        },
+        {
+          name: "小红",
+          age: 17,
+        },
+      ],
+    };
+  },
+};
+Vue.createApp(appOptions).mount("#app");
 ```
 
 :::
 
 :::snippet `v-for`把一个对象对应为一组元素
 
-1. 提供第一个的参数为键值。
-2. 提供第二个的参数为键名。
-3. 提供第三个参数为索引。
-4. 在遍历对象时，是按`Object.keys()`的结果遍历，但是不能保证它的结果在不同的`JavaScript`引擎下是一致的。
+> 在遍历对象时，是按`Object.keys()`的结果遍历，但是不能保证它的结果在不同的`JavaScript`引擎下是一致的。
 
 ```html
 <script src="https://unpkg.com/vue@next"></script>
-<div id="v-for-object">
-  <ul class="demos">
-    <li v-for="value in object">
+<div id="app">
+  <h2>value in myObject</h2>
+  <ul>
+    <li v-for="value in myObject">
       {{ value }}
     </li>
   </ul>
-  <div v-for="(value, name) in object">
-    {{ name }}: {{ value }}
-  </div>
-  <div v-for="(value, name, index) in object">
-    {{ index }}. {{ name }}: {{ value }}
-  </div>
-  <div v-for="key in object.keys()">
-    {{ key }}
-  </div>
+  <h2>(value, name) in myObject</h2>
+  <ul>
+    <li v-for="(value, name) in myObject">
+      {{ name }}: {{ value }}
+    </li>
+  </ul>
+  <h2>(value, name, index) in myObject</h2>
+  <ul>
+    <li v-for="(value, name, index) in myObject">
+      {{ index }}. {{ name }}: {{ value }}
+    </li>
+  </ul>
+  <h2>(value, name, index) of myObject</h2>
+  <ul>
+    <li v-for="(value, name, index) of myObject">
+      {{ index }}. {{ name }}: {{ value }}
+    </li>
+  </ul>
 </div>
 ```
 
 ```javascript
-let vForObject = new Vue({
-  el: "#v-for-object",
-  data: {
-    object: {
-      title: "How to do lists in Vue",
-      author: "Jane Doe",
-      publishedAt: "2016-04-10"
-    }
-  }
-});
+const appOptions = {
+  data() {
+    return {
+      myObject: {
+        title: "How to do lists in Vue",
+        author: "Jane Doe",
+        publishedAt: "2020-03-22",
+      },
+    };
+  },
+};
+Vue.createApp(appOptions).mount("#app");
 ```
 
 :::
@@ -82,30 +115,33 @@ let vForObject = new Vue({
 
 ```html
 <script src="https://unpkg.com/vue@next"></script>
-<div v-for="item in items" v-bind:key="item.id" id="app">
-  {{item}}
+<div id="app">
+  <ul>
+    <li v-for="item in items" v-bind:key="item.id">
+      {{ item }}
+    </li>
+  </ul>
 </div>
 ```
 
 ```javascript
-let app = new Vue({
-    el: "#app",
-    data: {
-        parentMessage: 'Parent',
-        items: [
-            {
-                id:1,
-                message: 'Foo',
-                tiltle:'ceshi001'
-            },
-            {
-                id:2
-                message: 'Bar',
-                tiltle:'ceshi002'
-            }
-        ]
-     }
-})
+const appOptions = {
+  data() {
+    return {
+      items: [
+        {
+          message: "Foo",
+          tiltle: "ceshi001",
+        },
+        {
+          message: "Bar",
+          tiltle: "ceshi002",
+        },
+      ],
+    };
+  },
+};
+Vue.createApp(appOptions).mount("#app");
 ```
 
 :::
@@ -186,164 +222,46 @@ var colors3 = colors.slice(1, 4); //  green,blue,yellow
 ```
 
 :::
-:::snippet 数组注意事项
-
-> 由于`JavaScript`的限制，`Vue`不能检测以下变动的数组
-
-1. 当你利用索引直接设置一个项时，例如：`vm.items[indexOfItem] = newValue`
-2. 当你修改数组的长度时，例如：`vm.items.length = newLength`
-
-```html
-<script src="https://unpkg.com/vue@next"></script>
-<ul id="app-2">
-  <li v-for="item in items"></li>
-</ul>
-```
-
-```javascript
-let app2 = new Vue({
-  el: "#app-2",
-  data: {
-    items: ["a", "b", "c"]
-  }
-});
-app2.items[1] = "x"; // 不是响应性的
-app2.items.length = 2; // 不是响应性的
-Vue.set(app2.items, 1, "x"); //响应性的
-app2.$set(app2.items, indexOfItem, newValue);
-app2.items.splice(1, 1, "aaa"); //响应性的 先删除x 再 添加 'aaa'
-app2.items.splice(newLength); //响应性的 vm.items.length = newLength
-```
-
-:::
-
-:::snippet 数组对象`for`
-
-```html
-<script src="https://unpkg.com/vue@next"></script>
-<ul id="app3">
-  <li v-for="item in items">
-    <p v-for="value in item">{{value}}</p>
-  </li>
-</ul>
-```
-
-```javascript
-let app3 = new Vue({
-  el: "#app-3",
-  data: {
-    items: [
-      {
-        id: 1,
-        name: "小强",
-        age: 18,
-        phone: "11111"
-      },
-      {
-        id: 8,
-        name: "小白",
-        age: 19,
-        phone: "22222"
-      }
-    ]
-  }
-});
-```
-
-:::
-
-:::snippet 对象更改检测注意事项
-
-> `JavaScript`的限制，`Vue`不能检测对象属性的添加或删除
-
-1. `Vue`不能动态添加根级别的响应式属性.
-2. 嵌套对象添加响应式属性
-
-```html
-<script src="https://unpkg.com/vue@next"></script>
-<ul id="app-4">
-    <li v-for="item in items">
-       {{item}}
-    </li>
-</ul>
-<ul id="app-5">
-    <li v-for="item in items">
-      {{item}}
-    </li>
-    </li>
-</ul>
-```
-
-```javascript
-let app4 = new Vue({
-  el: "#app-4",
-  data: {
-    name: "xihuang"
-  }
-});
-app4.age = 18; // 不是响应性的
-Vue.set(app4, "age", 27); //响应性的
-
-let app5 = new Vue({
-  el: "#app-5",
-  data: {
-    student: {
-      name: "xihuang"
-    }
-  }
-});
-app5.student.age = 18; // 不是响应性的
-Vue.set(app5.student, "age", 27); //响应性的
-app5.$set(app5.student, "age", 27); //响应性的
-
-Object.assign(app5.student, {
-  age: 27,
-  favoriteColor: "Vue Green"
-}); //不是响应性的
-
-app5.student = Object.assign({}, app5.student, {
-  phone: "8888",
-  favoriteColor: "Vue Green"
-}); //响应性的
-```
-
-:::
 
 :::snippet 显示过滤/排序结果
 
 ```html
 <script src="https://unpkg.com/vue@next"></script>
-<ul id="app-6">
-  <li v-for="item in evenNumbers">
-    {{item}}
-  </li>
-  <li v-for="item in even(numbers)">
-    {{item}}
-  </li>
-</ul>
+<div id="app">
+  <h2>计算属性</h2>
+  <ul>
+    <li v-for="item in evenNumbers">
+      {{item}}
+    </li>
+  </ul>
+  <h2>方法</h2>
+  <ul>
+    <li v-for="item in even(numbers)">
+      {{item}}
+    </li>
+  </ul>
+</div>
 ```
 
 ```javascript
-let app6 = new Vue({
-  el: "#app-6",
-  data: {
-    numbers: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
-  },
-  computed: {
-    evenNumbers: function() {
-      return this.numbers.filter(function(number) {
-        return number % 2 === 0;
-      });
-    }
+const appOptions = {
+  data() {
+    return {
+      numbers: [1, 2, 3, 4, 5],
+    };
   },
   methods: {
-    even: function(numbers) {
-      return numbers.filter(function(number) {
-        return number % 3 === 0;
-      });
-    }
-  }
-});
+    even(numbers) {
+      return numbers.filter((number) => number % 2 !== 0);
+    },
+  },
+  computed: {
+    evenNumbers() {
+      return this.numbers.filter((number) => number % 2 === 0);
+    },
+  },
+};
+Vue.createApp(appOptions).mount("#app");
 ```
 
 :::
@@ -354,41 +272,60 @@ let app6 = new Vue({
 
 ```html
 <script src="https://unpkg.com/vue@next"></script>
-<div id="app-7">
-  <span v-for="n in 10">{{ n }} </span>
+<div id="app">
+  <ul>
+    <li v-for="n in range">
+      {{n}}
+    </li>
+  </ul>
 </div>
 ```
 
 ```javascript
-let app7 = new Vue({
-  el: "#app-7"
-});
+const appOptions = {
+  data() {
+    return {
+      range: 10,
+    };
+  },
+};
+Vue.createApp(appOptions).mount("#app");
 ```
 
 :::
 
-:::snippet `v-for`on a`<template>`
+:::snippet 在`<template>`中使用`v-for`
 
 ```html
 <script src="https://unpkg.com/vue@next"></script>
-<ul id="app-8">
-  <template v-for="item in items">
-    <li>{{ item.msg }}</li>
-    <li class="divider" role="presentation"></li>
-  </template>
-</ul>
+<div id="app">
+  <ul>
+    <template v-for="item in items">
+      <li>{{ item.msg }}</li>
+      <li class="divider" role="presentation"></li>
+    </template>
+  </ul>
+</div>
 ```
 
 ```javascript
-let app8 = new Vue({
-  el: "#app-8",
-  data: {
-    items: [
-      { msg: "shenme", id: 1 },
-      { msg: "dongxi", id: 11 }
-    ]
-  }
-});
+const appOptions = {
+  data() {
+    return {
+      items: [
+        {
+          msg: "shenme",
+          id: 1,
+        },
+        {
+          msg: "dongxi",
+          id: 11,
+        },
+      ],
+    };
+  },
+};
+Vue.createApp(appOptions).mount("#app");
 ```
 
 :::
@@ -397,49 +334,50 @@ let app8 = new Vue({
 
 ```html
 <script src="https://unpkg.com/vue@next"></script>
-<div id="app-9">
-  <ul v-if="items.length">
-    <li v-for="item in items" v-if="item.isshow">
-      {{ item }}
+
+<div id="app">
+  <h2>for if show</h2>
+  <ul v-if="todos.length">
+    <!-- v-if="!todo.isComplete" 会报错 -->
+    <!-- v-show="!todo.isComplete" 没问题 -->
+    <li v-for="todo in todos" v-show="!todo.isComplete">
+      {{ todo }}
     </li>
   </ul>
-  <p v-else>No items left!</p>
+  <p v-else>No todos left!</p>
 </div>
 ```
 
 ```javascript
-let app9 = new Vue({
-  el: "#app-9",
-  data: {
-    items: [
-      {
-        msg: "shenme",
-        id: 1,
-        isshow: true
-      },
-      {
-        msg: "dongxi",
-        id: 2,
-        isshow: true
-      },
-      {
-        msg: "nubi",
-        id: 4,
-        isshow: false
-      },
-      {
-        msg: "laji",
-        id: 5,
-        isshow: false
-      },
-      {
-        msg: "sb",
-        id: 8,
-        isshow: true
-      }
-    ]
-  }
-});
+const appOptions = {
+  data() {
+    return {
+      todos: [
+        {
+          msg: "shenme",
+          isComplete: true,
+        },
+        {
+          msg: "dongxi",
+          isComplete: false,
+        },
+        {
+          msg: "nubi",
+          isComplete: true,
+        },
+        {
+          msg: "laji",
+          isComplete: false,
+        },
+        {
+          msg: "hello",
+          isComplete: true,
+        },
+      ],
+    };
+  },
+};
+Vue.createApp(appOptions).mount("#app");
 ```
 
 :::
@@ -450,69 +388,61 @@ let app9 = new Vue({
 
 ```html
 <script src="https://unpkg.com/vue@next"></script>
-<div id="todo-list-example">
-  <form v-on:submit.prevent="addNewTodo">
-    <label for="new-todo">Add a todo</label>
-    <input
-      v-model="newTodoText"
-      id="new-todo"
-      placeholder="E.g. Feed the cat"
-    />
+<div id="app">
+  <form @submit.prevent="addTodo">
+    <label for="new-todo">add todo</label>
+    <input v-model="nextTitle" placeholder="input a new todo" id="new-todo" />
     <button>Add</button>
   </form>
-  <ul>
-    <li
-      is="todo-item"
-      v-for="(todo, index) in todos"
-      v-bind:key="todo.id"
-      v-bind:title="todo.title"
-      v-on:remove="todos.splice(index, 1)"
-    ></li>
+  <ul v-if="todos.length">
+    <todo-item
+      v-for="(todo,index) in todos"
+      :key="todo.id"
+      :title="todo.title"
+      @remove="todos.splice(index,1)"
+    >
+    </todo-item>
   </ul>
+  <p v-else>No todos !</p>
 </div>
 ```
 
 ```javascript
-Vue.component("todo-item", {
-  template: "\
-    <li>\
-      {{ title }}\
-      <button v-on:click=\"$emit('remove')\">Remove</button>\
-    </li>\
-  ",
-  props: ["title"]
-});
-
-new Vue({
-  el: "#todo-list-example",
-  data: {
-    newTodoText: "",
-    todos: [
-      {
-        id: 1,
-        title: "Do the dishes"
-      },
-      {
-        id: 2,
-        title: "Take out the trash"
-      },
-      {
-        id: 3,
-        title: "Mow the lawn"
-      }
-    ],
-    nextTodoId: 4
+const appOptions = {
+  data() {
+    return {
+      nextId: 2,
+      nextTitle: "",
+      todos: [
+        {
+          id: 1,
+          title: "test",
+        },
+      ],
+    };
   },
   methods: {
-    addNewTodo: function() {
-      this.todos.push({
-        id: this.nextTodoId++,
-        title: this.newTodoText
-      });
-      this.newTodoText = "";
-    }
-  }
+    addTodo() {
+      let nextTodo = {
+        id: this.nextId,
+        title: this.nextTitle,
+      };
+      this.todos.push(nextTodo);
+      this.nextId++;
+    },
+  },
+};
+const app = Vue.createApp(appOptions);
+app.component("todo-item", {
+  template: `
+            <li>
+                {{ title }}
+                <button @click="$emit('remove')">Remove</button>
+            </li>
+        `,
+  props: ["title"],
 });
+app.mount("#app");
 ```
 
 :::
