--- a/src/notes/02vue/vue3.0/08.md
+++ b/src/notes/02vue/vue3.0/08.md
@@ -3,19 +3,20 @@
 
 ```html
 <script src="https://unpkg.com/vue@next"></script>
-<div id="example-1">
-  <button v-on:click="counter += 1">Add 1</button>
+<div id="app">
+  <button @click="counter += 1">Add 1</button>
   <p>The button above has been clicked {{ counter }} times.</p>
 </div>
 ```
 
 ```javascript
-var example1 = new Vue({
-  el: "#example-1",
-  data: {
-    counter: 0
-  }
-});
+Vue.createApp({
+  data() {
+    return {
+      counter: 1,
+    };
+  },
+}).mount("#app");
 ```
 
 :::
@@ -25,32 +26,30 @@ var example1 = new Vue({
 
 ```html
 <script src="https://unpkg.com/vue@next"></script>
-<div id="example-2">
-  <!--`greet`是在下面定义的方法名 -->
-  <button v-on:click="greet">Greet</button>
+<div id="app">
+  <!-- `greet` 在下面定义的方法名 -->
+  <button @click="greet">Greet</button>
 </div>
 ```
 
 ```javascript
-var example2 = new Vue({
-  el: "#example-2",
-  data: {
-    name: "Vue.js"
+Vue.createApp({
+  data() {
+    return {
+      name: "Vue.js",
+    };
   },
-  // 在`methods`对象中定义方法
   methods: {
-    greet: function(event) {
-      //`this`在方法里指向当前 Vue 实例
+    greet(event) {
+      // `this` 内部 `methods` 指向当前活动实例
       alert("Hello " + this.name + "!");
-      //`event`是原生 DOM 事件
+      // `event` 是原生 DOM event
       if (event) {
         alert(event.target.tagName);
       }
-    }
-  }
-});
-// 也可以用 JavaScript 直接调用方法
-example2.greet(); // => 'Hello Vue.js!'
+    },
+  },
+}).mount("#app");
 ```
 
 :::
@@ -59,21 +58,20 @@ example2.greet(); // => 'Hello Vue.js!'
 
 ```html
 <script src="https://unpkg.com/vue@next"></script>
-<div id="example-3">
-  <button v-on:click="say('hi')">Say hi</button>
-  <button v-on:click="say('what')">Say what</button>
+<div id="app">
+  <button @click="say('hi')">Say hi</button>
+  <button @click="say('what')">Say what</button>
 </div>
 ```
 
 ```javascript
-let example3 = new Vue({
-  el: "#example-3",
+Vue.createApp({
   methods: {
-    say: function(message) {
+    say(message) {
       alert(message);
-    }
-  }
-});
+    },
+  },
+}).mount("#app");
 ```
 
 :::
@@ -83,32 +81,61 @@ let example3 = new Vue({
 
 ```html
 <script src="https://unpkg.com/vue@next"></script>
-<div id="example-4">
-  <button v-on:click="warn('Form cannot be submitted yet.', $event)">
+<div id="app">
+  <button @click="warn('Form cannot be submitted yet.', $event)">
     Submit
   </button>
 </div>
 ```
 
 ```javascript
-let example4 = new Vue({
-  el: "#example-4",
+Vue.createApp({
   methods: {
-    warn: function(message, event) {
-      // 现在我们可以访问原生事件对象
+    warn(message, event) {
+      // now we have access to the native event
       if (event) {
         event.preventDefault();
       }
       alert(message);
-    }
-  }
-});
+    },
+  },
+}).mount("#app");
+```
+
+:::
+
+:::snippet 多事件处理器
+事件处理程序中可以有多个方法，这些方法由逗号运算符分隔
+
+```html
+<script src="https://unpkg.com/vue@next"></script>
+<div id="app">
+  <button @click="one($event), two($event)">
+    Submit
+  </button>
+</div>
+```
+
+```javascript
+Vue.createApp({
+  methods: {
+    one(event) {
+      console.log("one");
+      // first handler logic...
+    },
+    two(event) {
+      console.log("two");
+      // second handler logic...
+    },
+  },
+}).mount("#app");
 ```
 
 :::
 
 :::snippet 事件修饰符
 Vue.js 为 v-on 提供了事件修饰符。之前提过，修饰符是由点开头的指令后缀来表示的。
+
 1. 使用修饰符时，顺序很重要；相应的代码会以同样的顺序产生。
 2. 用`v-on:click.prevent.self`会阻止所有的点击，
 3. `v-on:click.self.prevent`只会阻止对元素自身的点击。
@@ -226,8 +253,8 @@ Vue.config.keyCodes.f1 = 112;
 :::snippet `HTML`中监听事件
 `Vue.js`事件处理方法和表达式都严格绑定在当前视图的`ViewModel`上，它不会导致任何维护上的困难。
 
-1. 扫一眼`HTML`模板便能轻松定位在`JavaScript`代码里对应的方法。
-2. 因为你无须在`JavaScript`里手动绑定事件，你的`ViewModel`代码可以是非常纯粹的逻辑，和`DOM`完全解耦，更易于测试。
-3. 当一个`ViewModel`被销毁时，所有的事件处理器都会自动被删除。你无须担心如何清理它们。
+1. `HTML`模板便能轻松定位在`JavaScript`代码里对应的方法。
+2. 在`JavaScript`里手动绑定事件，你的`ViewModel`代码可以是非常纯粹的逻辑，和`DOM`完全解耦，更易于测试。
+3. 当一个`ViewModel`被销毁时，所有的事件处理器都会自动被删除。
 
 :::
