--- a/src/notes/02vue/vue3.0/07.md
+++ b/src/notes/02vue/vue3.0/07.md
@@ -332,13 +332,16 @@ Vue.createApp(appOptions).mount("#app");
 
 :::snippet `v-for`with`v-if`
 
+>3.x 版本中 v-if 总是优先于 v-for 生效。
+>2.x 版本中在一个元素上同时使用 v-if 和 v-for 时，v-for 会优先作用。
+
 ```html
 <script src="https://unpkg.com/vue@next"></script>
 
 <div id="app">
   <h2>for if show</h2>
   <ul v-if="todos.length">
-    <!-- v-if="!todo.isComplete" 会报错 -->
+    <!-- v-if="!todo.isComplete" 会报错 v-if先生效所以报错了。-->
     <!-- v-show="!todo.isComplete" 没问题 -->
     <li v-for="todo in todos" v-show="!todo.isComplete">
       {{ todo }}
