--- a/src/notes/02vue/01vue/07.md
+++ b/src/notes/02vue/01vue/07.md
@@ -25,8 +25,8 @@ var example1 = new Vue({
   el: "#example-1",
   data: {
     items: [{ message: "Foo" }, { message: "Bar" }],
-    parentMessage: "parent"
-  }
+    parentMessage: "parent",
+  },
 });
 ```
 
@@ -66,9 +66,9 @@ let vForObject = new Vue({
     object: {
       title: "How to do lists in Vue",
       author: "Jane Doe",
-      publishedAt: "2016-04-10"
-    }
-  }
+      publishedAt: "2016-04-10",
+    },
+  },
 });
 ```
 
@@ -204,8 +204,8 @@ var colors3 = colors.slice(1, 4); //  green,blue,yellow
 let app2 = new Vue({
   el: "#app-2",
   data: {
-    items: ["a", "b", "c"]
-  }
+    items: ["a", "b", "c"],
+  },
 });
 app2.items[1] = "x"; // 不是响应性的
 app2.items.length = 2; // 不是响应性的
@@ -237,16 +237,16 @@ let app3 = new Vue({
         id: 1,
         name: "小强",
         age: 18,
-        phone: "11111"
+        phone: "11111",
       },
       {
         id: 8,
         name: "小白",
         age: 19,
-        phone: "22222"
-      }
-    ]
-  }
+        phone: "22222",
+      },
+    ],
+  },
 });
 ```
 
@@ -267,7 +267,7 @@ let app3 = new Vue({
     </li>
 </ul>
 <ul id="app-5">
-    <li v-for="item in items">
+    <li v-for="item in student">
       {{item}}
     </li>
     </li>
@@ -278,19 +278,19 @@ let app3 = new Vue({
 let app4 = new Vue({
   el: "#app-4",
   data: {
-    name: "xihuang"
-  }
+    items: { name: "xihuang" },
+  },
 });
-app4.age = 18; // 不是响应性的
-Vue.set(app4, "age", 27); //响应性的
+app4.items.age = 18; // 不是响应性的
+Vue.set(app4.items, "age", 27); //响应性的
 
 let app5 = new Vue({
   el: "#app-5",
   data: {
     student: {
-      name: "xihuang"
-    }
-  }
+      name: "xihuang",
+    },
+  },
 });
 app5.student.age = 18; // 不是响应性的
 Vue.set(app5.student, "age", 27); //响应性的
@@ -298,12 +298,12 @@ app5.$set(app5.student, "age", 27); //响应性的
 
 Object.assign(app5.student, {
   age: 27,
-  favoriteColor: "Vue Green"
+  favoriteColor: "Vue Green",
 }); //不是响应性的
 
 app5.student = Object.assign({}, app5.student, {
   phone: "8888",
-  favoriteColor: "Vue Green"
+  favoriteColor: "Vue Green",
 }); //响应性的
 ```
 
@@ -327,22 +327,22 @@ app5.student = Object.assign({}, app5.student, {
 let app6 = new Vue({
   el: "#app-6",
   data: {
-    numbers: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
+    numbers: [1, 2, 3, 4, 5, 6, 7, 8, 9, 10],
   },
   computed: {
     evenNumbers: function() {
       return this.numbers.filter(function(number) {
         return number % 2 === 0;
       });
-    }
+    },
   },
   methods: {
     even: function(numbers) {
       return numbers.filter(function(number) {
         return number % 3 === 0;
       });
-    }
-  }
+    },
+  },
 });
 ```
 
@@ -361,7 +361,7 @@ let app6 = new Vue({
 
 ```javascript
 let app7 = new Vue({
-  el: "#app-7"
+  el: "#app-7",
 });
 ```
 
@@ -385,9 +385,9 @@ let app8 = new Vue({
   data: {
     items: [
       { msg: "shenme", id: 1 },
-      { msg: "dongxi", id: 11 }
-    ]
-  }
+      { msg: "dongxi", id: 11 },
+    ],
+  },
 });
 ```
 
@@ -415,30 +415,30 @@ let app9 = new Vue({
       {
         msg: "shenme",
         id: 1,
-        isshow: true
+        isshow: true,
       },
       {
         msg: "dongxi",
         id: 2,
-        isshow: true
+        isshow: true,
       },
       {
         msg: "nubi",
         id: 4,
-        isshow: false
+        isshow: false,
       },
       {
         msg: "laji",
         id: 5,
-        isshow: false
+        isshow: false,
       },
       {
         msg: "sb",
         id: 8,
-        isshow: true
-      }
-    ]
-  }
+        isshow: true,
+      },
+    ],
+  },
 });
 ```
 
@@ -480,7 +480,7 @@ Vue.component("todo-item", {
       <button v-on:click=\"$emit('remove')\">Remove</button>\
     </li>\
   ",
-  props: ["title"]
+  props: ["title"],
 });
 
 new Vue({
@@ -490,28 +490,28 @@ new Vue({
     todos: [
       {
         id: 1,
-        title: "Do the dishes"
+        title: "Do the dishes",
       },
       {
         id: 2,
-        title: "Take out the trash"
+        title: "Take out the trash",
       },
       {
         id: 3,
-        title: "Mow the lawn"
-      }
+        title: "Mow the lawn",
+      },
     ],
-    nextTodoId: 4
+    nextTodoId: 4,
   },
   methods: {
     addNewTodo: function() {
       this.todos.push({
         id: this.nextTodoId++,
-        title: this.newTodoText
+        title: this.newTodoText,
       });
       this.newTodoText = "";
-    }
-  }
+    },
+  },
 });
 ```
 
