--- a/src/notes/02vue/vue3.0/09.md
+++ b/src/notes/02vue/vue3.0/09.md
@@ -1,17 +1,13 @@
 :::snippet 基础用法
 
 1. `v-model`指令在表单`<input>`、`<textarea>`及 `<select>`元素上创建双向数据绑定。
-2. 它会根据控件类型自动选取正确的方法来更新元素。
-3. `v-model`本质上是语法糖。
-4. `v-model`在内部为不同的输入元素使用不同的属性并抛出不同的事件
-5. `text`和`textarea`元素使用`value`属性和`input`事件；
-6. `checkbox`和`radio`使用`checked`属性和`change`事件；
-7. `select`字段将`value`作为`prop`并将`change`作为事件。
+2. `text`和`textarea`元素使用`value`属性和`input`事件；
+3. `checkbox`和`radio`使用`checked`属性和`change`事件；
+4. `select`字段将`value`作为`prop`并将`change`作为事件。
 
 > `v-model`会忽略所有表单元素的`value`、`checked`、`selected`特性的初始值而总是将`Vue`实例的数据作为数据来源。<br/>
 > 你应该通过 `JavaScript`在组件的`data`选项中声明初始值。<br/>
-> 对于需要使用输入法 (如中文、日文、韩文等) 的语言，`v-model`不会在输入法组合文字过程中得到更新。<br/>
-> 请使用`input`事件。
+> 对于需要使用输入法 (如中文、日文、韩文等) 的语言，`v-model`不会在输入法组合文字过程中得到更新，请使用`input`事件。
 
 :::
 
@@ -19,19 +15,20 @@
 
 ```html
 <script src="https://unpkg.com/vue@next"></script>
-<div id="example-1">
+<div id="app">
   <input v-model="message" placeholder="edit me" />
   <p>Message is: {{ message }}</p>
 </div>
 ```
 
 ```javascript
-let example1 = new Vue({
-  el: "#example-1",
-  data: {
-    message: "wenben"
-  }
-});
+Vue.createApp({
+  data() {
+    return {
+      message: "",
+    };
+  },
+}).mount("#app");
 ```
 
 :::
@@ -41,7 +38,7 @@ let example1 = new Vue({
 
 ```html
 <script src="https://unpkg.com/vue@next"></script>
-<div id="example-2">
+<div id="app">
   <span>Multiline message is:</span>
   <p style="white-space: pre-line;">{{ message }}</p>
   <br />
@@ -50,12 +47,13 @@ let example1 = new Vue({
 ```
 
 ```javascript
-let example2 = new Vue({
-  el: "#example-2",
-  data: {
-    message: "duohangwenben"
-  }
-});
+Vue.createApp({
+  data() {
+    return {
+      message: "",
+    };
+  },
+}).mount("#app");
 ```
 
 :::
@@ -68,25 +66,21 @@ let example2 = new Vue({
 
 ```html
 <script src="https://unpkg.com/vue@next"></script>
-<div id="example-3">
-  单个复选框:
-  <br />
+<div id="app">
+  <h2>单个复选框</h2>
   <input type="checkbox" id="checkbox" v-model="checked" />
   <label for="checkbox">{{ checked }}</label>
-  <br />
-  单个复选框 绑定string
-  <br />
+  <h2>单个复选框不是默认的true、false需要加上 checked="toggle===''已选中"</h2>
   <input
     type="checkbox"
     id="toggle"
     v-model="toggle"
-    true-value="yes"
-    false-value="no"
+    checked="toggle===''已选中"
+    true-value="已选中"
+    false-value="未选中"
   />
   <label for="toggle">{{ toggle }}</label>
-  <br />
-  多个复选框:
-  <br />
+  <h2>复选框</h2>
   <input type="checkbox" id="jack" value="Jack" v-model="checkedNames" />
   <label for="jack">Jack</label>
   <input type="checkbox" id="john" value="John" v-model="checkedNames" />
@@ -99,14 +93,15 @@ let example2 = new Vue({
 ```
 
 ```javascript
-let example3 = new Vue({
-  el: "#example-3",
-  data: {
-    checked: true,
-    checkedNames: ["Jack"],
-    toggle: "yes"
-  }
-});
+Vue.createApp({
+  data() {
+    return {
+      checked: true,
+      checkedNames: ["Jack"],
+      toggle: "已选中",
+    };
+  },
+}).mount("#app");
 ```
 
 :::
@@ -135,15 +130,16 @@ let example3 = new Vue({
 ```
 
 ```javascript
-let example4 = new Vue({
-  el: "#example-4",
-  data: {
-    picked: "Two",
-    sex: "男人",
-    women: "女人",
-    men: "男人"
-  }
-});
+Vue.createApp({
+  data() {
+    return {
+      picked: "Two",
+      sex: "男人",
+      women: "女人",
+      men: "男人",
+    };
+  },
+}).mount("#app");
 ```
 
 :::
@@ -160,7 +156,8 @@ let example4 = new Vue({
 
 ```html
 <script src="https://unpkg.com/vue@next"></script>
-<div id="example-5">
+<div id="app">
+  <h2>单选下拉框</h2>
   <select v-model="selected">
     <option disabled value="">请选择</option>
     <option>A</option>
@@ -168,90 +165,52 @@ let example4 = new Vue({
     <option>C</option>
   </select>
   <span>Selected: {{ selected }}</span>
-</div>
-<div id="example-6">
-  <select v-model="selected" multiple style="width: 50px;">
+  <h2>多选下拉框</h2>
+  <select v-model="selectedList" multiple style="width: 50px;">
     <option>A</option>
     <option>B</option>
     <option>C</option>
   </select>
   <br />
-  <span>Selected: {{ selected }}</span>
-</div>
-<div id="example-7">
-  <select v-model="selected">
-    <option v-for="option in options" v-bind:value="option.value">
-      {{ option.text }}
+  <span>selectedList: {{ selectedList }}</span>
+  <h2>单选下拉框</h2>
+  <select v-model="selectedValue">
+    <option
+      v-for="option in options"
+      v-bind:value="option.value"
+      v-bind:text="option.text"
+    >
+      <!-- {{ option.text }} -->
     </option>
   </select>
-  <span>Selected: {{ selected }}</span>
-</div>
-<div id="example-8">
-  <select v-model="selected">
-    <option v-for="option in options" v-bind:value="option">
-      {{ option.text }}
-    </option>
-  </select>
-  <span>Selected: {{ selected }}</span>
+  <span>selectedValue: {{ selectedValue }}</span>
 </div>
 ```
 
 ```javascript
-let example5 = new Vue({
-  el: "#example-5",
-  data: {
-    selected: "A"
-  }
-});
-let example6 = new Vue({
-  el: "#example-6",
-  data: {
-    selected: ["A", "B"]
-  }
-});
-let example7 = new Vue({
-  el: "#example-7",
-  data: {
-    selected: "A",
-    options: [
-      {
-        text: "One",
-        value: "A"
-      },
-      {
-        text: "Two",
-        value: "B"
-      },
-      {
-        text: "Three",
-        value: "C"
-      }
-    ]
-  }
-});
-let example8 = new Vue({
-  el: "#example-8",
-  data: {
-    selected: {
-      text: "Two",
-      value: "B"
-    },
-    options: [
-      {
-        text: "One",
-        value: "A"
-      },
-      {
-        text: "Two",
-        value: "B"
-      },
-      {
-        text: "Three",
-        value: "C"
-      }
-    ]
-  }
-});
+Vue.createApp({
+  data() {
+    return {
+      selected: "A",
+      selectedList: ["A", "B"],
+      selectedValue: "A",
+      options: [
+        {
+          text: "One",
+          value: "A",
+        },
+        {
+          text: "Two",
+          value: "B",
+        },
+        {
+          text: "Three",
+          value: "C",
+        },
+      ],
+    };
+  },
+}).mount("#app");
 ```
 
 :::
@@ -264,7 +223,7 @@ let example8 = new Vue({
 
 ```html
 <script src="https://unpkg.com/vue@next"></script>
-<div id="example-9">
+<div id="app">
   <input v-model.lazy="message" placeholder="edit me" />
   <p>Message length: {{ message.length }}</p>
   <input v-model.number="age" type="number" />
@@ -275,14 +234,15 @@ let example8 = new Vue({
 ```
 
 ```javascript
-let example9 = new Vue({
-  el: "#example-9",
-  data: {
-    message: "",
-    age: null,
-    msg: ""
-  }
-});
+Vue.createApp({
+  data() {
+    return {
+      message: "",
+      age: 0,
+      msg: "",
+    };
+  },
+}).mount("#app");
 ```
 
 :::
