--- a/src/notes/02vue/vue3.0/10.md
+++ b/src/notes/02vue/vue3.0/10.md
@@ -1,12 +1,10 @@
 :::snippet 基本示例
 
-1. 组件是可复用的`Vue`实例，所以它们与`new Vue`接收相同的选项，例如`data`、`computed`、`watch`、`methods`以及生命周期钩子等。仅有的例外是像`el`这样根实例特有的选项。<br>
-2. 一个组件的`data`选项必须是一个函数，因此每个实例可以维护一份被返回对象的独立的拷贝<br>
-3. 全局注册的`Vue.component('my-component-name', { ... options ...})`<br>
+1. 组件是可复用的组件实例，所以它们与 `new Vue` 接收相同的选项，例如 `data`、`computed`、`watch`、`methods` 以及生命周期钩子等。仅有的例外是像 `el` 这样根实例特有的选项。
 
 ```html
 <script src="https://unpkg.com/vue@next"></script>
-<div id="components-demos">
+<div id="app">
   <button-counter></button-counter>
   <button-counter></button-counter>
   <button-counter></button-counter>
@@ -14,34 +12,22 @@
 ```
 
 ```javascript
-var buttonCounterData = {
-  count: 0
-};
-// 定义一个名为 button-counter 的新组件
-Vue.component("button-counter", {
-  // 一个组件的 data 选项必须是一个函数，因此每个实例可以维护一份被返回对象的独立的拷贝
-  // 正确的写法
-  data: function() {
+const app = Vue.createApp({});
+app.component("button-counter", {
+  data() {
     return {
-      count: 0
+      count: 0,
     };
   },
-  // 正确的写法
-  // data: function () {
-  //     // // 这个才是返回对象的独立的拷贝
-  //     return JSON.parse(JSON.stringify(buttonCounterData))
-  // },
-  // 错误的写法
-  // data: function() {
-  //   // // 这个不是返回对象的独立的拷贝
-  //   return buttonCounterData;
-  // },
-  template:
-    '<button v-on:click="count++">You clicked me {{ count }} times.</button>'
+  template: `
+    <p>
+      <button @click="count++">
+        You clicked me {{ count }} times.
+      </button>
+    </p>
+    `,
 });
-let componentsDemo = new Vue({
-  el: "#components-demos"
-});
+app.mount("#app");
 ```
 
 :::
@@ -50,34 +36,55 @@ let componentsDemo = new Vue({
 
 ```html
 <script src="https://unpkg.com/vue@next"></script>
-<div id="blog-post-demos">
+<div id="app">
+  <h2>组件</h2>
   <blog-post title="My journey with Vue"></blog-post>
   <blog-post title="Blogging with Vue"></blog-post>
   <blog-post title="Why Vue is so fun"></blog-post>
-  <!-- 循环组件 -->
+  <h2>循环组件</h2>
   <blog-post
     v-for="post in posts"
     v-bind:key="post.id"
     v-bind:title="post.title"
+    v-bind:content="post.content"
   ></blog-post>
 </div>
 ```
 
 ```javascript
-Vue.component("blog-post", {
-  props: ["title"],
-  template: "<h3>{{ title }}</h3>"
+const app = Vue.createApp({
+  data() {
+    return {
+      posts: [
+        {
+          id: 1,
+          title: "js",
+          content: "JavaScript是世界上最好的语言",
+        },
+        {
+          id: 2,
+          title: "ts",
+          content: "TypeScript是JavaScript的超集",
+        },
+        {
+          id: 3,
+          title: "Vue",
+          content: "Vue是前端三大框架之一",
+        },
+      ],
+    };
+  },
 });
-let blogPostDemo = new Vue({
-  el: "#blog-post-demos",
-  data: {
-    posts: [
-      { id: 1, title: "My journey with Vue" },
-      { id: 2, title: "Blogging with Vue" },
-      { id: 3, title: "Why Vue is so fun" }
-    ]
-  }
+app.component("blog-post", {
+  template: `
+        <div>
+           <h3>{{title}}</h3>
+           <p>{{content}}</p>
+        </div>
+        `,
+  props: ["title", "content"],
 });
+app.mount("#app");
 ```
 
 :::
@@ -106,7 +113,7 @@ Vue.component("blog-post", {
       <h3>{{ post.title }}</h3>
       <div v-html="post.content"></div>
     </div>
- `
+ `,
 });
 let blogPostRootDemo = new Vue({
   el: "#blog-post-root-demos",
@@ -115,20 +122,20 @@ let blogPostRootDemo = new Vue({
       {
         id: 1,
         title: "博客Vue",
-        content: "vue 学习笔记"
+        content: "vue 学习笔记",
       },
       {
         id: 2,
         title: "简书Vue",
-        content: "简书 学习笔记"
+        content: "简书 学习笔记",
       },
       {
         id: 3,
         title: "github",
-        content: "git 学习笔记"
-      }
-    ]
-  }
+        content: "git 学习笔记",
+      },
+    ],
+  },
 });
 ```
 
@@ -176,7 +183,7 @@ Vue.component("blog-post-event", {
       </button>
       <div v-html="post.content"></div>
     </div>
- `
+ `,
 });
 let blogPostsEventsDemo = new Vue({
   el: "#blog-posts-events-demos",
@@ -185,30 +192,30 @@ let blogPostsEventsDemo = new Vue({
       {
         id: 1,
         title: "博客Vue",
-        content: "vue 学习笔记"
+        content: "vue 学习笔记",
       },
       {
         id: 2,
         title: "简书Vue",
-        content: "简书 学习笔记"
+        content: "简书 学习笔记",
       },
       {
         id: 3,
         title: "gitfun",
-        content: "git 学习笔记"
-      }
+        content: "git 学习笔记",
+      },
     ],
     postFontSize: 1,
     widthSize: 400,
     heightSize: 160,
-    colorValue: "red"
+    colorValue: "red",
   },
   methods: {
     parentStyleFun: function(enlargeAmount, enlargeAmount1) {
       this.heightSize += enlargeAmount;
       this.widthSize += enlargeAmount1;
-    }
-  }
+    },
+  },
 });
 ```
 
@@ -239,14 +246,14 @@ Vue.component("custom-input", {
       v-bind:value="value"
       v-on:input="$emit('input', $event.target.value)"
     >
- `
+ `,
 });
 let customInputDemo = new Vue({
   el: "#custom-input-demos",
   data: {
     customText: "",
-    searchText: ""
-  }
+    searchText: "",
+  },
 });
 ```
 
@@ -270,10 +277,10 @@ Vue.component("alert-box", {
       <strong>Error!</strong>
       <slot></slot>
     </div>
- `
+ `,
 });
 let alertBoxDemo = new Vue({
-  el: "#alert-box-demos"
+  el: "#alert-box-demos",
 });
 ```
 
@@ -306,25 +313,25 @@ let alertBoxDemo = new Vue({
 
 ```javascript
 Vue.component("tab-home", {
-  template: "<div>home componet</div>"
+  template: "<div>home componet</div>",
 });
 Vue.component("tab-house", {
-  template: "<div>house componet</div>"
+  template: "<div>house componet</div>",
 });
 Vue.component("tab-family", {
-  template: "<div>family componet</div>"
+  template: "<div>family componet</div>",
 });
 let dynamicComponentDemo = new Vue({
   el: "#dynamic-component-demos",
   data: {
     currentTab: "Home",
-    tabs: ["home", "house", "family"]
+    tabs: ["home", "house", "family"],
   },
   computed: {
     currentTabComponent: function() {
       return "tab-" + this.currentTab.toLowerCase();
-    }
-  }
+    },
+  },
 });
 ```
 
